<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/newsHeadline"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:id="@+id/img_head"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/ini_gambar"
                android:scaleType="centerCrop"
                android:src="@drawable/img_headline"
                android:transitionName="simple_activity_transition"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#AA000000"
                android:gravity="center"
                android:text="@string/headlines"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/newsBusiness"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:id="@+id/img_bisnis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/ini_gambar"
                android:src="@drawable/img_business"
                android:transitionName="simple_activity_transition"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#AA000000"
                android:gravity="center"
                android:text="@string/business"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/newsEntertainment"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:id="@+id/imgEnt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/ini_gambar"
                android:scaleType="centerCrop"
                android:src="@drawable/img_enter"
                android:transitionName="simple_activity_transition"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#AA000000"
                android:gravity="center"
                android:text="@string/entertainment"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/newsHealth"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:id="@+id/img_health"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/ini_gambar"
                android:src="@drawable/img_health"
                android:transitionName="simple_activity_transition"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#AA000000"
                android:gravity="center"
                android:text="@string/health"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/newsScience"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:id="@+id/img_science"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_science"
                android:contentDescription="@string/ini_gambar"
                android:transitionName="simple_activity_transition"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#AA000000"
                android:gravity="center"
                android:text="@string/science"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/newsSports"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:id="@+id/img_sports"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/ini_gambar"
                android:src="@drawable/img_sports"
                android:transitionName="simple_activity_transition"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#AA000000"
                android:gravity="center"
                android:text="@string/sports"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/newsTech"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:id="@+id/img_tech"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_tech"
                android:contentDescription="@string/ini_gambar"
                android:transitionName="simple_activity_transition"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#AA000000"
                android:gravity="center"
                android:text="@string/technology"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </FrameLayout>


    </LinearLayout>

</ScrollView>
